deployments/worker/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
spec:
  selector:
    component: worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3333
